Bug 479067 - SMS messages are being received but not shown
Summary: SMS messages are being received but not shown
Status: RESOLVED FIXED
Alias: None
Product: spacebar
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.01.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-27 07:23 UTC by Justin Zobel
Modified: 2024-04-30 21:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
on the left, incoming message notification; on the right, spacebar UI stays empty (110.26 KB, image/png)
2024-03-23 09:44 UTC, Marco Mattiolo
Details
notification on the left, empty spacebar UI on the right (147.48 KB, image/png)
2024-03-23 10:56 UTC, Marco Mattiolo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2023-12-27 07:23:33 UTC
SUMMARY
SMS are being received as I am seeing notifications, but they are not displayed in Spacebar or in the database.

I sent out a test SMS and I saw the reply in a popup notification, but it is not listed in Spacebar or in the messages database.

I also saw a second SMS come in from my doctor, but it is not listed in Spacebar or the database.

STEPS TO REPRODUCE
1. Receive SMS
2. Check Spacebar
3. Check messages.sqlite database to make sure
Comment 1 Marco Mattiolo 2024-03-23 09:43:43 UTC
This issue still seems to be present on spacebar 24.02.0 on OG PP with pmOS edge, so Plasma6. I'm doing the test trying to call the PP from the Android phone, for whatever reason the call (not spacebar-related, of course) is not even accepted, so the automatic SMS message "I've called you, please call me back" is received. Yet not shown in spacebar UI

Following is the extract from tinydm.log
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_content_type(uint32_t, uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_commit_state(uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_surrounding_text(const QString&, uint32_t, uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_preferred_language(const QString&) ""
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_content_type(uint32_t, uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_commit_state(uint32_t)
in clear preedit.. clearing word engine
futuresql: Running "\n        INSERT INTO Messages (\n            id,\n            phoneNumber,\n            text,\n            time,\n            read,\n            delivered,\n            sentByMe,\n            attachments,\n            smil,\n            fromNumber,\n            messageId,\n            deliveryReport,\n            readReport,\n            pendingDownload,\n            contentLocation,\n            expires,\n            size)\n        VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n        "
futuresql: SQL error: "no such table: Messages Unable to execute statement"
kf.notifications: Failed to play sound with canberra: Invalid state
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_surrounding_text(const QString&, uint32_t, uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_content_type(uint32_t, uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_surrounding_text(const QString&, uint32_t, uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_preferred_language(const QString&) ""
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_content_type(uint32_t, uint32_t)
maliit.connection.wayland: virtual void Maliit::Wayland::InputMethodContext::zwp_input_method_context_v1_commit_state(uint32_t)
in clear preedit.. clearing word engine
word ribbon: candidates changed
word ribbon: candidates changed
keyboard is reporting <x y w h>: < 0 504 360 216 > to the app manager.
qt.qml.defaultmethod: Assigning an object to a signal handler is deprecated.Instead, create the object, give it an id, and call the desired slot from the signal handler.
qt.qml.defaultmethod: Assigning an object to a signal handler is deprecated.Instead, create the object, give it an id, and call the desired slot from the signal handler.
QSGContext::initialize: depth buffer support missing, expect rendering errors
QSGContext::initialize: stencil buffer support missing, expect rendering errors
qt.qml.defaultmethod: Assigning an object to a signal handler is deprecated.Instead, create the object, give it an id, and call the desired slot from the signal handler.
qrc:/org/kde/plasma/private/mobileshell/NotificationCard.qml:95:9: QML QQuickItem: List didn't append all objects
qt.qml.defaultmethod: Assigning an object to a signal handler is deprecated.Instead, create the object, give it an id, and call the desired slot from the signal handler.
qrc:/org/kde/plasma/private/mobileshell/NotificationCard.qml:95:9: QML QQuickItem: List didn't append all objects
No GLSL shader code found (versions tried:  QList(100) ) in baked shader QShader(stage=0 shaders=QList(ShaderKey(0 Version(100 QFlags()) 0), ShaderKey(0 Version(100 QFlags()) 1), ShaderKey(1 Version(130 QFlags()) 0), ShaderKey(1 Version(130 QFlags()) 1), ShaderKey(1 Version(300 QFlags(0x1)) 0), ShaderKey(1 Version(300 QFlags(0x1)) 1), ShaderKey(2 Version(50 QFlags()) 0), ShaderKey(2 Version(50 QFlags()) 1), ShaderKey(4 Version(12 QFlags()) 0), ShaderKey(4 Version(12 QFlags()) 1)) desc.isValid=true)
No GLSL shader code found (versions tried:  QList(100) ) in baked shader QShader(stage=4 shaders=QList(ShaderKey(0 Version(100 QFlags()) 0), ShaderKey(1 Version(130 QFlags()) 0), ShaderKey(1 Version(300 QFlags(0x1)) 0), ShaderKey(2 Version(50 QFlags()) 0), ShaderKey(4 Version(12 QFlags()) 0)) desc.isValid=true)
No GLSL shader code found (versions tried:  QList(100) ) in baked shader QShader(stage=0 shaders=QList(ShaderKey(0 Version(100 QFlags()) 0), ShaderKey(0 Version(100 QFlags()) 1), ShaderKey(1 Version(130 QFlags()) 0), ShaderKey(1 Version(130 QFlags()) 1), ShaderKey(1 Version(300 QFlags(0x1)) 0), ShaderKey(1 Version(300 QFlags(0x1)) 1), ShaderKey(2 Version(50 QFlags()) 0), ShaderKey(2 Version(50 QFlags()) 1), ShaderKey(4 Version(12 QFlags()) 0), ShaderKey(4 Version(12 QFlags()) 1)) desc.isValid=true)
Failed to build graphics pipeline state

looks like SQL cannot find the "Messages" table
futuresql: SQL error: "no such table: Messages Unable to execute statement"
Comment 2 Marco Mattiolo 2024-03-23 09:44:39 UTC
Created attachment 167640 [details]
on the left, incoming message notification; on the right, spacebar UI stays empty
Comment 3 Marco Mattiolo 2024-03-23 10:56:35 UTC
Created attachment 167646 [details]
notification on the left, empty spacebar UI on the right

issue also present when testing on op6-enchilada, still pmOS edge
On op6 the modem is working, so instead of the automatic cell network message, I sent myself a SMS
Comment 4 Marco Mattiolo 2024-04-03 20:53:19 UTC
For me, this gets fixed with https://invent.kde.org/plasma-mobile/spacebar/-/merge_requests/158

Please try and let me know if it's fixed for you as well!
Comment 5 Jonah Brüchert 2024-04-30 21:42:04 UTC
Git commit 3f633c597a030f16e04fcc125ece6a9e0790a238 by Jonah Brüchert.
Committed on 30/04/2024 at 21:18.
Pushed by jbbgameich into branch 'master'.

Fix reading database migration files

M  +2    -0    lib/database/database.cpp

https://invent.kde.org/plasma-mobile/spacebar/-/commit/3f633c597a030f16e04fcc125ece6a9e0790a238