Fix reading database migration files

BUG: 479067